<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background_image</string>
    <string name="app_logo">app_logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co - Ed</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate"><![CDATA[Find a team in your city & dominate]]></string>
    <string name="the_league">the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="looking_for_a_coed_beginner_near_you">Looking for a CoEd Beginner Near You</string>
    <string name="processing" />
</resources>
