<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoEdLooking">

    <ImageView
        android:id="@+id/backgroundLooking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/exercisebg"
        android:contentDescription="@string/background_image" />

    <TextView
        android:id="@+id/txtTitle1Looking"
        android:layout_width="301dp"
        android:layout_height="59dp"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/montserrat"
        android:singleLine="false"
        android:text="@string/looking_for_a_coed_beginner_near_you"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundLooking" />

    <ImageView
        android:id="@+id/processing"
        android:layout_width="61dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle1Looking"
        app:srcCompat="@android:drawable/ic_popup_sync"
        android:contentDescription="@string/processing" />
</androidx.constraintlayout.widget.ConstraintLayout>